Source/WebCore/accessibility/gtk/WebKitAccessibleInterfaceText.cpp
@@ -79,7 +79,7 @@ static gchar* textForRenderer(RenderObject* renderer)
         else {
             // List item's markers will be treated in an special way
             // later on this function, so ignore them here.
-            if (object->isReplaced() && !renderer->isListItem())
+            if (object->isReplaced() && !object->isListMarker())
                 g_string_append_unichar(resultText, objectReplacementCharacter);
 
             // We need to check children, if any, to consider when
